stage6/AIReadyAudit_Enterprise_Stage6/12_sre_devops_release_v6/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiready-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aiready-api
  template:
    metadata:
      labels:
        app: aiready-api
    spec:
      containers:
        - name: api
          image: aiready/api:stage6
          ports:
            - containerPort: 3001
