stage6/AIReadyAudit_Enterprise_Stage6/12_sre_devops_release_v6/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiready-api
spec:
  rules:
    - host: api.aireadyaudit.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aiready-api
                port:
                  number: 80
